# solitito

./: .gitignore  Cargo.toml  README.md  build.rs  chord_model.onnx  chord_model.onnx.data
models/: chord_model.onnx  chord_model.onnx.data  model_trainer.py
src/: audio.rs  brain.rs  main.rs  model.rs  state.rs
ui/: appwindow.slint
