[package]
name = "solitito"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
rustfft = "6.2"
anyhow = "1.0"
log = "0.4"
ort = { version = "2.0.0-rc.9", features = ["load-dynamic", "download-binaries"] }
ndarray = "0.15"
slint = "1.8" 
hound = "3.5"

[build-dependencies]
slint-build = "1.8"

